--- a/code.ipynb
+++ b/code.ipynb
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8766651c-ed0b-43d1-931e-51f79dd21ef0",
+   "id": "dummy",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71f3f7a8-ed29-4be3-b8ef-21f4640498e3",
+   "id": "dummy",
    "metadata": {},
    "source": [
     "## Importing necessary libraries"
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4ecd3734-cc0e-4e66-9470-d45f787eb977",
+   "id": "dummy",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3b1dc82c-044c-4e10-90ad-fdada358777d",
+   "id": "dummy",
    "metadata": {},
    "outputs": [
     {
@@ -243,9 +243,9 @@
    "source": [
     "# === Securely Load Twilio Credentials ===\n",
     "# Environment variable configuration\n",
-    "account_sid = os.getenv(\"ACe765389c6f0b295cb9d733f3e8583dd1\")\n",
-    "auth_token = os.getenv(\"a69737f0f9be7d5a69e58b9f9e0427bb\")\n",
-    "twilio_phone_number = os.getenv(\"+18333669803\")\n",
+    "account_sid = os.getenv(\"dummy\")\n",
+    "auth_token = os.getenv(\"dummy\")\n",
+    "twilio_phone_number = os.getenv(\"+dummy\")\n",
     "\n",
     "\n",
     "# Ensure credentials are loaded\n",
